# crawlee-storage

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  typos.toml
.github/scripts/: before-beta-release.js
.github/workflows/: _check_code.yaml  manual_release_node.yaml  on_main.yaml  on_master.yaml  on_pull_request.yaml  publish_to_npm.yaml
crawlee-storage/: Cargo.toml
crawlee-storage-node/: .npmignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  dts-header.d.ts  index.d.ts  index.js  lib.d.ts  lib.js  package-lock.json  package.json  tsconfig.json
crawlee-storage-node/npm/darwin-arm64/: README.md  package.json
crawlee-storage-node/npm/darwin-x64/: README.md  package.json
crawlee-storage-node/npm/linux-x64-gnu/: README.md  package.json
crawlee-storage-node/npm/win32-x64-msvc/: README.md  package.json
crawlee-storage-node/src/: lib.rs  models.rs
crawlee-storage-node/test/: dataset.test.ts  key_value_store.test.ts  request_queue.test.ts
crawlee-storage-python/: Cargo.toml  pyproject.toml
crawlee-storage-python/python/crawlee_storage/: __init__.py  __init__.pyi
crawlee-storage-python/python/crawlee_storage/_native/: __init__.pyi
crawlee-storage-python/src/: lib.rs  models.rs
crawlee-storage-python/tests/: test_conversions.py
crawlee-storage/src/: clock.rs  dataset.rs  key_value_store.rs  lib.rs  models.rs  pagination.rs  request_queue.rs  utils.rs
