[package]
name = "crawlee-storage-node"
version = "0.0.0"
edition = "2021"
description = "Node.js bindings for crawlee-storage"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
crawlee-storage = { path = "../crawlee-storage" }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
serde_json.workspace = true
tokio.workspace = true
