[package]
name = "crawlee-storage-node"
version = "0.0.0"
edition = "2021"
description = "Node.js bindings for crawlee-storage"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
crawlee-storage = { path = "../crawlee-storage" }
napi = { version = "3", default-features = false, features = ["async", "serde-json", "napi4"] }
napi-derive = "3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
napi-build = "2"
