[package]
name = "crawlee-storage-node"
version = "0.0.0"
edition = "2021"
description = "Node.js bindings for crawlee-storage"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
crawlee-storage = { path = "../crawlee-storage" }
napi = { version = "3", default-features = false, features = [
    "async",
    "serde-json",
    "napi4",
    "napi5",
    "web_stream",
    "tokio_rt",
] }
napi-derive = "3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"

[build-dependencies]
napi-build = "2"
