[package]
name = "crawlee-storage-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for crawlee-storage"
license = "Apache-2.0"

[lib]
name = "_crawlee_storage"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
crawlee-storage = { path = "../crawlee-storage" }
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
