[package]
name = "crawlee-storage-python"
version = "0.0.0"
edition = "2021"
description = "Python bindings for crawlee-storage"
license = "Apache-2.0"

[lib]
name = "_crawlee_storage"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
chrono = "0.4"
crawlee-storage = { path = "../crawlee-storage" }
pyo3 = { version = "0.28", features = ["chrono"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.19"
pythonize = "0.28"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
