[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crawlee-storage"
version = "0.1.0"
description = "Filesystem storage client for Crawlee crawlers (Rust-powered)"
requires-python = ">=3.10"
license = "Apache-2.0"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "crawlee_storage._native"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501", "F401", "F403", "F405"]
