[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crawlee-storage"
version = "0.1.0"
description = "Filesystem storage client for Crawlee crawlers (Rust-powered)"
requires-python = ">=3.10"
license = "Apache-2.0"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "crawlee_storage._native"

# `reexport_module_members!` (see src/lib.rs) generates an __init__.py for the
# pure-Python `crawlee_storage` package; pyo3-stub-gen requires this opt-in for it.
[tool.pyo3-stub-gen]
generate-init-py = ["crawlee_storage"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501", "F401", "F403", "F405"]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
