[package]
name = "crawlee-storage"
version = "0.1.0"
edition = "2021"
description = "Filesystem storage client for Crawlee crawlers"
license = "Apache-2.0"

[features]
default = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
