[package]
name = "crawlee-storage"
version = "0.1.0"
edition = "2021"
description = "Filesystem storage client for Crawlee crawlers"
license = "Apache-2.0"

[features]
default = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
rand = "0.9"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
